<?xml version="1.0"?>
<package>
  <name>or_owd_controller</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE plugins for communicating with OWD.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/or_plugins/or_owd_controller</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>owd_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>owd_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
